# trading-bot

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  TASKS.md  TODO.md  compose.yaml  pyproject.toml  tasks.md  trading-bot.md
.github/: pull_request_template.md
.github/workflows/: ci.yaml  docker.yaml
config/: kill_switch.yaml  logging.yaml  mc_drawdown_floor.yaml  meta_loop.yaml  notifications.yaml  phases.yaml  quant.yaml  risk.yaml  structured.yaml  system.yaml  tax.yaml  turbos.yaml  webui.yaml
data/: seed_fundamentals.csv
data/universes/: cac40.yaml  eu-dividend-starter.yaml  sbf120.yaml  srd-eligible.yaml
docs/: coverage_report.txt  sdd.md  sds.md  srs.md  test_plan.md  traceability.csv
tests/: test_cli.py  test_data_provider_factory.py  test_main.py  test_main_registry.py  test_result.py
tests/accounts/: test_account_registry.py  test_cross_account_risk.py  test_factory.py  test_group.py  test_household_drawdown_trigger.py  test_persistence_interop.py  test_structural.py  test_tax_model.py  test_tick.py  test_token_verifier.py  test_token_verifier_cr024.py  test_yaml_loader.py
tests/analytics/: test_attribution.py  test_engine.py  test_rationale.py  test_report.py
tests/backtesting/: test_broker.py  test_clock.py  test_config.py  test_dividends.py  test_engine.py  test_injection_scheduler.py  test_knockout.py  test_market_replay.py  test_result_rationales.py  test_srd_simulator.py  test_walk_forward.py
tests/bdd/: test_kill_switch_bdd.py
tests/benchmark/: test_backtest_throughput.py  test_must_halt_perf.py
tests/capital_flow/: test_flow.py  test_risk_scaling.py
tests/config/: test_pydantic_schemas.py  test_validator.py
tests/conformance/: test_behavioral_and_safety.py  test_clock_discipline.py  test_imports.py  test_naming.py  test_req_coverage_index.py  test_result_fn_naming.py  test_traceability_meta.py
tests/dashboard/: test_engine.py
tests/data/: test_mock.py  test_types.py  test_universes.py
tests/execution/: test_fees.py  test_local.py  test_paper_broker.py  test_slippage.py  test_types.py
tests/fixtures/: regime.py  test_regime_fixtures.py  test_seed_fundamentals_coverage.py
tests/integration/: test_broker_conformance_drill.py  test_edge_cases_drill.py  test_kill_switch_drill.py  test_multi_account_drill.py  test_multi_account_live_runtime.py  test_multi_year_regime_crossing.py  test_phase5_fx_hedge_drill.py  test_phase5_stack.py  test_phase5_tax_harvest_drill.py  test_phase6_drills.py  test_structured_product_stress_drill.py  test_walk_forward_drill.py
tests/milestone_controller/: test_controller.py
tests/models/: test_flow.py  test_identifiers.py  test_instrument.py  test_jobs.py  test_meta.py  test_money.py  test_phase.py  test_rationale.py  test_rotation_proposal.py  test_safety.py  test_trading.py
tests/notifications/: test_approval.py  test_broker_emitter.py  test_canonical.py  test_channels.py  test_digest.py  test_email_channel.py  test_emitters.py  test_fanout.py  test_loader.py  test_payloads.py  test_slack_channel.py  test_structural.py
tests/observability/: test_loader.py  test_logger.py
tests/persistence/: test_approval_audit_repository.py  test_backtest_jobs_repository.py  test_backtest_repository.py  test_connection.py  test_hypothesis_repository.py  test_idempotency_repository.py  test_instrument_bars_repository.py  test_live_orders_repository.py  test_migration_drill.py  test_migrations.py  test_paper_sessions_repository.py  test_portfolio_repository.py  test_registry_repository.py  test_snapshot_repository.py  test_token_revocations_repository.py  test_transition_repository.py
tests/phase_engine/: test_engine.py  test_hysteresis_flapping.py  test_loader.py  test_phase_constraints_per_req.py
tests/portfolio/: test_portfolio.py  test_srd_accounting.py  test_srd_position.py
tests/portfolio_manager/: test_attribution.py  test_proposal.py  test_rebalancer.py  test_sector_rotator_facade.py  test_structural.py  test_tax_harvester_facade.py
tests/property/: test_mock_data.py  test_phase_hysteresis.py  test_risk_parity.py  test_tax_boundaries.py  test_walk_forward.py
tests/quant/: test_indicators.py
tests/regime/: test_config.py  test_detector.py  test_orchestrator.py  test_transition.py
tests/risk/: test_approval_gate.py  test_config.py  test_cross_account_gate.py  test_engine.py  test_loader.py  test_metrics.py
tests/safety/: test_alerts.py  test_anomaly.py  test_loader.py  test_notification_bridge.py  test_protocol.py  test_recovery.py  test_snapshot.py  test_srd_settlement_scheduler.py  test_state_manager.py  test_trigger_categories.py
tests/screener/: test_config.py  test_engine.py
tests/strategies/: conftest.py  test_core.py  test_ensemble.py  test_protocol.py  test_srd_pairs.py  test_tactical.py
tests/strategy_lab/: test_evaluator.py  test_generator.py  test_hypothesis_ids.py  test_loop_controller.py  test_loop_controller_mc.py  test_mc_drawdown_floor.py  test_metrics.py  test_optimizer.py  test_registry.py  test_risk_guard.py  test_scoring.py  test_stability_score.py
tests/structured_products/: test_admission.py
tests/tax/: test_config.py  test_engine.py  test_engine_account.py  test_harvest.py
tests/turbo_selector/: test_config.py  test_engine.py  test_loader.py  test_score.py  test_stats.py
tests/webapp/: openapi_phase_a.expected.json  test_a11y_motion_and_focus.py  test_accessibility.py  test_app.py  test_aria_label_audit.py  test_backtest_workflow.py  test_bars_api.py  test_canonical.py  test_container_cve_scan.py  test_container_reproducibility.py  test_container_runtime_smoke.py  test_correlation_middleware.py  test_default_app_resume.py  test_dockerfile.py  test_fragment_query_param.py  test_household_switcher.py  (+36 more)
tools/: fundamentals_csv_template.py  generate_baseline_report.py  generate_bundled_fixtures.py  issue_operator_token.py  regenerate_openapi_snapshot.py  traceability-report.py  traceability.py  yfinance_recorder.py  yfinance_recorder_universe.py
trading_system/: __init__.py  cli.py  main.py  result.py
(+390 files in other folders)
