[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "After-tax trading system with phase-gated capital scaling and broker-agnostic execution"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Laurent Fazio" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pytest-bdd>=7.0",
    "pytest-benchmark>=4.0",
    "coverage[toml]>=7.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["trading_system*"]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "N",           # pep8-naming  (REQ_SDD_NAM_001)
    "UP",          # pyupgrade
    "B",           # bugbear
    "PL",          # pylint
    "RUF",         # ruff-specific
    "SIM",         # flake8-simplify
    "PIE",
    "TID",         # flake8-tidy-imports
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]   # magic numbers in tests are fine

[tool.ruff.format]
quote-style = "double"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_no_return = true
warn_unreachable = true

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "wallclock: tests that use real wall-clock time (excluded from default CI run)",
    "perf: performance benchmark tests",
]

# ---------- coverage ----------
[tool.coverage.run]
source = ["trading_system"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
