[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "After-tax trading system with phase-gated capital scaling and broker-agnostic execution"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Laurent Fazio" }]
dependencies = [
    "pyyaml>=6.0",
]

# CR-016 MVP-5 — operator entry point. ``pip install -e .`` exposes
# the ``trading-bot`` command on the operator's PATH.
[project.scripts]
trading-bot = "trading_system.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pytest-bdd>=7.0",
    "pytest-benchmark>=4.0",
    "coverage[toml]>=7.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]
# CR-009: yfinance is the recorder script's only path. The runtime,
# tests, and CI never import yfinance / pandas — the YFinanceCache is
# the system of record (REQ_NF_DAT_001). Install with:
#     pip install trading-bot[yfinance]
# Operator runs ``python tools/yfinance_recorder.py ...`` to populate
# the cache from real Yahoo; subsequent backtests read from the cache
# offline (REQ_F_DAT_005 / REQ_F_DAT_006).
yfinance = [
    "yfinance>=0.2",
    "pandas>=2.0",
]
# CR-016 MVP-4: report-artefact PNG renderer. matplotlib is the only
# new dependency; bundled with the ``reports`` extra so operators
# who don't need charts skip the ~30 MB install:
#     pip install trading-bot[reports]
reports = [
    "matplotlib>=3.7",
]
# CR-017 Phase A: FastAPI webapp + HTMX dashboard. Heavy install
# (~30 MB transitive); operators who don't want the dashboard keep the
# stdlib `webui/` path. Install with:
#     pip install trading-bot[webapp]
webapp = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27",  # FastAPI's TestClient transitive
]

[tool.setuptools.packages.find]
include = ["trading_system*"]

# CR-017 Phase A — bundle the FastAPI webapp's Jinja2 templates +
# static assets into the wheel so the container deploy works
# without a separate asset-copy step.
[tool.setuptools.package-data]
"trading_system.webapp" = [
    "templates/*.html",
    "templates/**/*.html",
    "static/*",
]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "N",           # pep8-naming  (REQ_SDD_NAM_001)
    "UP",          # pyupgrade
    "B",           # bugbear
    "PL",          # pylint
    "RUF",         # ruff-specific
    "SIM",         # flake8-simplify
    "PIE",
    "TID",         # flake8-tidy-imports
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]   # magic numbers in tests are fine

[tool.ruff.format]
quote-style = "double"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_no_return = true
warn_unreachable = true

# Tests intentionally exercise runtime behaviors that the static type
# system rejects on purpose: comparing distinct NewType aliases that
# share a runtime base, multiplying through generic combinators where
# mypy cannot infer the inner TypeVar from a lambda body, and using
# parametrized fixtures whose builder kwargs are loose. Relax the
# matching error codes only inside `tests/`.
[[tool.mypy.overrides]]
module = "tests.*"
warn_unused_ignores = false
disable_error_code = ["operator", "comparison-overlap", "arg-type"]

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "wallclock: tests that use real wall-clock time (excluded from default CI run)",
    "perf: performance benchmark tests",
]

# ---------- coverage ----------
[tool.coverage.run]
source = ["trading_system"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
